[package]
name = "twa_pack_lib"
version = "0.1.11"
authors = ["Benedikt Constantin Radtke <benediktradtke@gmail.com>"]
description = "A Total War: Arena pack file library"
keywords = ["Total", "War", "Arena", "pack"]
repository = "https://github.com/TotalWarArena-Modding/twa_pack_lib"
license = "LGPL-3.0+"

[dependencies]
byteorder = "1.2"
bitflags = "1.0"
cached_file_view = "0.1.1"
