[package]
name = "tw_pack_lib"
version = "0.1.20"
authors = ["Benedikt Constantin Radtke <benediktradtke@gmail.com>"]
description = "A Total War series pack file library"
keywords = ["Total", "War", "pack"]
repository = "https://github.com/TotalWar-Modding/tw_pack_lib"
license = "LGPL-3.0+"

[dependencies]
byteorder = "1.2"
bitflags = "1.0"
cached_file_view = "0.1.3"
